// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tiles /> renders correctly 1 columns layout with border 1`] = `
<div
  className="border p-2 mt-1 mb-1"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        0
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        1
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        2
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        3
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        4
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        6
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        7
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        8
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        test
        9
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tiles /> renders correctly 1 columns layout with border 2`] = `
<div
  className="border p-2 mt-1 mb-1"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        0
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        1
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        2
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        3
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        4
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        6
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        7
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        8
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-12 col-lg-12"
    >
      <div>
        test
        9
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tiles /> renders correctly 2 columns layout 1`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        0
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        1
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        2
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        3
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        4
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        6
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        7
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        8
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        9
      </div>
    </div>
  </div>,
]
`;

exports[`<Tiles /> renders correctly 2 columns layout 2`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col-sm-3 col-md-5 col-lg-4"
    >
      <div>
        test
        0
      </div>
    </div>
    <div
      className="col-sm-7 col-md-5 col-lg-2"
    >
      <div>
        test
        1
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-3 col-md-5 col-lg-4"
    >
      <div>
        test
        2
      </div>
    </div>
    <div
      className="col-sm-7 col-md-5 col-lg-2"
    >
      <div>
        test
        3
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-3 col-md-5 col-lg-4"
    >
      <div>
        test
        4
      </div>
    </div>
    <div
      className="col-sm-7 col-md-5 col-lg-2"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-3 col-md-5 col-lg-4"
    >
      <div>
        test
        6
      </div>
    </div>
    <div
      className="col-sm-7 col-md-5 col-lg-2"
    >
      <div>
        test
        7
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-3 col-md-5 col-lg-4"
    >
      <div>
        test
        8
      </div>
    </div>
    <div
      className="col-sm-7 col-md-5 col-lg-2"
    >
      <div>
        test
        9
      </div>
    </div>
  </div>,
]
`;

exports[`<Tiles /> renders correctly 3 columns layout 1`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        0
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        1
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        2
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        3
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        4
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        6
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        7
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    >
      <div>
        test
        8
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    >
      <div>
        test
        9
      </div>
    </div>
    <div
      className="col-sm-4 col-md-4 col-lg-3"
    />
    <div
      className="col-sm-4 col-md-4 col-lg-4"
    />
  </div>,
]
`;

exports[`<Tiles /> renders correctly 3 columns layout 2`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        0
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        1
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        2
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        3
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        4
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        5
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        6
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        7
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        8
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    >
      <div>
        test
        9
      </div>
    </div>
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    />
    <div
      className="col-sm-4 col-md-3 col-lg-4"
    />
  </div>,
]
`;

exports[`<Tiles /> renders null when no children 1`] = `null`;
